--- a/Chatcraft/Chatcraft.Core.csproj
+++ b/Chatcraft/Chatcraft.Core.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="SessionStorage.cs" />
+    <Compile Include="StringConstants.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -100,6 +101,7 @@
     <Content Include="img\goblin.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="img\magical-blacksmith.jpg" />
     <Content Include="img\theBat.jpg" />
     <Content Include="img\troll.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -115,6 +117,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="img\stranger.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="TextData\CastleEnd.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="TextData\CastleRoom1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="TextData\CastleStart.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="TextData\CaveEnd.txt">
