--- a/docker-compose.vs.release.yml
+++ b/docker-compose.vs.release.yml
@@ -10,3 +10,13 @@ services:
     entrypoint: powershell -Command [System.Threading.Thread]::Sleep([System.Threading.Timeout]::Infinite)
     labels:
       - "com.microsoft.visualstudio.targetoperatingsystem=windows"
+
+  chatcraftbot:
+    build:
+      args:
+        source: ${DOCKER_BUILD_SOURCE}
+    volumes:
+      - ~/clrdbg:/clrdbg:ro
+    entrypoint: tail -f /dev/null
+    labels:
+      - "com.microsoft.visualstudio.targetoperatingsystem=linux"
