--- a/ChatcraftTest/packages.config
+++ b/ChatcraftTest/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Moq" version="4.7.1" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.1.11" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.1.11" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="Telegram.Bot" version="10.4.0" targetFramework="net461" />
 </packages>
