--- a/ChatcraftBot/ChatcraftBot.csproj
+++ b/ChatcraftBot/ChatcraftBot.csproj
@@ -6,6 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="1.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.2" />
     <PackageReference Include="Telegram.Bot" Version="10.4.0" />
   </ItemGroup>
 
